examples/datalog/09_recursion/38_fibonacci_like.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_fib
Knowledge graph 'test_fib' created.
Switched to knowledge graph: test_fib
> .kg use test_fib
Switched to knowledge graph: test_fib
> +fib(0, 0).
Inserted 1 fact(s) into 'fib'.
> +fib(1, 1).
Inserted 1 fact(s) into 'fib'.
> +fib(N, V) :- fib(N1, V1), fib(N2, V2), N1 = N - 1, N2 = N - 2, V = V1 + V2, N <= 10, N > 1.
Script error: Parse error: Invalid term: 'N - 1'
